@@ -1,3 +1,7 @@
+Version Next
+
+    - Make HL7FileWriter EOS and EOM characters configurable
+
 Version 1.3.2 Released November 14, 2025
 
     - Add the ability to parse our generated XML
